--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "website",
+  "name": "test",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.0",
-    "browserslist": "^4.16.5",
-    "gh-pages": "^3.2.3",
-    "postcss": "^7.0.36",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.1",
+    "@mui/material": "^5.1.1",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
-    "react-scroll": "^1.8.3",
-    "styled-components": "^5.3.0",
-    "web-vitals": "^2.1.0"
+    "styled-components": "^5.3.3",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
