--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
+    "next-translate": "^1.3.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
