--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@emotion/react": "^11.8.2",
+    "@portabletext/react": "^2.0.0",
+    "@sanity/client": "^3.4.1",
+    "@sanity/image-url": "^1.0.1",
     "esbuild": "^0.14.49",
     "framer-motion": "^6.2.8",
     "next": "^13.0.7",
+    "next-sanity": "^3.1.5",
     "next-translate": "^1.5.0",
+    "prismic-reactjs": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.0.23"
