--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@sanity/client": "^5.2.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
