--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./*"],
-      "@/components": ["/components/"]
+      "@/components": ["/components/"],
+      "@/styles": ["/styles/"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
