--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.6",
     "@portabletext/react": "^2.0.2",
     "@sanity/client": "^5.2.2",
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -22,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "supports-color": "^9.3.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
