--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^0.1.11",
     "framer-motion": "^9.1.6",
     "markdown-to-jsx": "^7.1.9",
     "next": "13.2.3",
