--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@portabletext/react": "^2.0.2",
+    "@radix-ui/react-select": "^1.2.1",
     "@sanity/client": "^5.2.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.14.0",
@@ -18,7 +19,7 @@
     "@vercel/analytics": "^0.1.11",
     "framer-motion": "^9.1.6",
     "markdown-to-jsx": "^7.1.9",
-    "next": "13.2.3",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
