--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "supports-color": "^9.3.1",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.2",
     "typescript": "4.9.5"
   },
   "devDependencies": {
