--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@portabletext/react": "^2.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-hover-card": "^1.0.5",
     "@radix-ui/react-select": "^1.2.1",
     "@sanity/client": "^5.2.2",
     "@tailwindcss/line-clamp": "^0.4.2",
