working on light theme

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-hover-card": "^1.0.5",
     "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-switch": "^1.0.2",
     "@sanity/client": "^5.2.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.14.0",
@@ -23,6 +24,7 @@
     "markdown-to-jsx": "^7.1.9",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "remark": "^14.0.2",
