--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -20,6 +20,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^0.1.11",
+    "concurrently": "^8.0.1",
     "framer-motion": "^9.1.6",
     "markdown-to-jsx": "^7.1.9",
     "next": "13.2.4",
@@ -29,6 +30,7 @@
     "react-icons": "^4.7.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
+    "supports-color": "^9.3.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
