--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@portabletext/react": "^2.0.2",
@@ -34,10 +36,18 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "7.0.4",
+    "@storybook/addon-interactions": "7.0.4",
+    "@storybook/addon-links": "7.0.4",
+    "@storybook/blocks": "7.0.4",
+    "@storybook/nextjs": "7.0.4",
+    "@storybook/react": "7.0.4",
+    "@storybook/testing-library": "0.0.14-next.2",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "prisma": "^4.12.0",
+    "storybook": "7.0.4",
     "tailwindcss": "^3.3.1"
   }
 }
