--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "@types/react-dom": "18.0.11",
     "@vercel/analytics": "^0.1.11",
     "class-variance-authority": "^0.5.2",
+    "eslint-config-next": "^13.4.0",
     "framer-motion": "^9.1.6",
-    "next": "13.2.4",
+    "next": "13.4.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "remark": "^14.0.2",
     "remark-html": "^15.0.2",
     "supports-color": "^9.3.1",
+    "tailwindcss-animated": "^1.0.0",
     "typescript": "4.9.5"
   },
   "devDependencies": {
