--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.2",
+    "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^5.2.2",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.14.0",
