--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "clsx": "^1.2.1",
     "eslint-config-next": "^13.4.0",
     "framer-motion": "^9.1.6",
+    "jotai": "^2.2.1",
     "next": "13.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
